Adding postgres database config to connect with dockerized pg database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,26 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.security.user.name=user
 spring.security.user.password=password
+
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.jpa.hibernate.ddl-auto=create
+
+
+
+
+
+
+
+
+
+
+#spring.jpa.hibernate.ddl-auto=none
+#
+#spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=s$cret
